Setup intial HTML structure   and include D3.js

--- a/script.html
+++ b/script.html
@@ -1,1 +1,17 @@
 
+<!Doctype html>
+<html lane="en"
+ <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, intial scale=1.0"
+    <title>D3.js Interactive Data Points </title>
+
+    <script src="https:d3js.org/d3.v7.min.js"></script>
+
+    <script defer src"script.js"></script>
+ </head>
+ <body>
+    <h1>D3.js Interactive Data Points</h1>
+    <div id="data container"></div>
+ </body>
+ <html></html>
