--- a/script.html
+++ b/script.html
@@ -9,6 +9,21 @@
     <script src="https:d3js.org/d3.v7.min.js"></script>
 
     <script defer src"script.js"></script>
+    <style>
+        #data-container{
+            display:flex;
+            flex-wrap:wrap;
+      .datapoint
+            width:50px;
+            height:50px;
+            backround color: blue;
+            margin:5px;
+            tranisition: backround-color 0.3s;
+
+                
+
+        }
+    </style>
  </head>
  <body>
     <h1>D3.js Interactive Data Points</h1>
