Add hover interactivity to div elements

--- a/script.html
+++ b/script.html
@@ -8,7 +8,7 @@
         <script src=" http://d3js.org/d3.v7.min.js"></script>
         <script src=" script.js" defer></script>
         <style>
-            .datapoint{
+            .data-point{
                 width:100px;
                 height:100px;
                 background-color: lightblue;
@@ -20,6 +20,6 @@
         </style>
     </head>
     <body>
-        
+
     </body>
     </html>
